deriving/tests/rejected/eq1.ml
(* Eq for functions *)
type t = int -> int deriving (Eq)
